// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generateKeyPair should generate EC KeyPair 1`] = `
{
  "algorithms": [
    "ES512",
  ],
  "created": 2021-01-01T08:00:00.000Z,
  "expiresAt": null,
  "id": "011ca5fd-abf4-4c6f-a349-59df20c48ead",
  "isExternal": false,
  "namedCurve": "P-521",
  "notBefore": 2021-01-01T08:00:00.000Z,
  "operations": [
    "sign",
    "verify",
  ],
  "originUri": null,
  "ownerId": null,
  "passphrase": null,
  "preferredAlgorithm": "ES512",
  "privateKey": "PRIVATE_KEY",
  "publicKey": "PUBLIC_KEY",
  "revision": 0,
  "type": "EC",
  "updated": 2021-01-01T08:00:00.000Z,
  "version": 0,
}
`;

exports[`generateKeyPair should generate EC KeyPair with namedCurve 1`] = `
{
  "algorithms": [
    "ES384",
  ],
  "created": 2021-01-01T08:00:00.000Z,
  "expiresAt": null,
  "id": "011ca5fd-abf4-4c6f-a349-59df20c48ead",
  "isExternal": false,
  "namedCurve": "P-384",
  "notBefore": 2021-01-01T08:00:00.000Z,
  "operations": [
    "sign",
    "verify",
  ],
  "originUri": null,
  "ownerId": null,
  "passphrase": null,
  "preferredAlgorithm": "ES384",
  "privateKey": "PRIVATE_KEY",
  "publicKey": "PUBLIC_KEY",
  "revision": 0,
  "type": "EC",
  "updated": 2021-01-01T08:00:00.000Z,
  "version": 0,
}
`;

exports[`generateKeyPair should generate HS KeyPair 1`] = `
{
  "algorithms": [
    "HS256",
  ],
  "created": 2021-01-01T08:00:00.000Z,
  "expiresAt": null,
  "id": "011ca5fd-abf4-4c6f-a349-59df20c48ead",
  "isExternal": false,
  "namedCurve": null,
  "notBefore": 2021-01-01T08:00:00.000Z,
  "operations": [
    "sign",
    "verify",
  ],
  "originUri": null,
  "ownerId": null,
  "passphrase": null,
  "preferredAlgorithm": "HS256",
  "privateKey": "w(Hr~(~DwknfWryBEsAmJwO0*5Urs_10vsL2dllJdTVc.C3j_fF36a-Xsji.8g*)w(9j0C-2rlp2fCXsK1fxA_).*6NG70vloV3h)*do0!T44PB7099S21y7~2--h5)~",
  "publicKey": null,
  "revision": 0,
  "type": "HS",
  "updated": 2021-01-01T08:00:00.000Z,
  "version": 0,
}
`;

exports[`generateKeyPair should generate RSA KeyPair 1`] = `
{
  "algorithms": [
    "RS256",
    "RS384",
    "RS512",
  ],
  "created": 2021-01-01T08:00:00.000Z,
  "expiresAt": null,
  "id": "011ca5fd-abf4-4c6f-a349-59df20c48ead",
  "isExternal": false,
  "namedCurve": null,
  "notBefore": 2021-01-01T08:00:00.000Z,
  "operations": [
    "decrypt",
    "encrypt",
    "sign",
    "verify",
  ],
  "originUri": null,
  "ownerId": null,
  "passphrase": null,
  "preferredAlgorithm": "RS512",
  "privateKey": "PRIVATE_KEY",
  "publicKey": "PUBLIC_KEY",
  "revision": 0,
  "type": "RSA",
  "updated": 2021-01-01T08:00:00.000Z,
  "version": 0,
}
`;

exports[`generateKeyPair should generate RSA KeyPair with passphrase 1`] = `
{
  "algorithms": [
    "RS256",
    "RS384",
    "RS512",
  ],
  "created": 2021-01-01T08:00:00.000Z,
  "expiresAt": null,
  "id": "011ca5fd-abf4-4c6f-a349-59df20c48ead",
  "isExternal": false,
  "namedCurve": null,
  "notBefore": 2021-01-01T08:00:00.000Z,
  "operations": [
    "decrypt",
    "encrypt",
    "sign",
    "verify",
  ],
  "originUri": null,
  "ownerId": null,
  "passphrase": "pass",
  "preferredAlgorithm": "RS512",
  "privateKey": "PRIVATE_KEY",
  "publicKey": "PUBLIC_KEY",
  "revision": 0,
  "type": "RSA",
  "updated": 2021-01-01T08:00:00.000Z,
  "version": 0,
}
`;
